增加了说明

--- a/智艺创想测试报告范本.md
+++ b/智艺创想测试报告范本.md
@@ -10,6 +10,8 @@
 
 ## 回归测试情况
 
+**注意:**该栏在不进行回归测试时不用编写
+
 回测测试范围: 整个APP
 
 | 名称 | 数量 | 备注 |
@@ -25,6 +27,8 @@
 
 ## BUG修复情况
 
+**注意:**该栏在不进行BUG修复时不用编写
+
 | 名称 | 数量 | 备注 |
 |:----|:----|:----|
 | BUG总数 | 100 | 开始测试时的BUG数量 |
@@ -38,6 +42,8 @@
 BUG情况总结: 这一届开发不行啊,该换了.
 
 ## 功能完成情况
+
+**注意:**该栏在不进行功能测试时不用编写
 
 新增功能说明: 新增了登录手机就会过热爆炸的功能
 
