增加了说明

--- a/智艺创想测试报告范本.md
+++ b/智艺创想测试报告范本.md
@@ -1,5 +1,7 @@
 # 智艺创想测试报告范本
 
+> 注意:此段内容不用编写在测试用例中.编写该测试报告的目的,是为了让相关管理人员花尽量少的时间了解软件的开发情况和质量,尤其是作为产品发布的**重要参考项**.
+
 ## 测试工程概览
 
 简要描述被测试工程的概况,填写版本信息
